--- a/docs/算法/算法.md
+++ b/docs/算法/算法.md
@@ -1,20 +1,37 @@
-# 第一章 了解Web及网络基础
+### 整数反转
 
-## 使用http协议访问Web
+```js
+// 整数反转
+/**
+ * @param {number} x
+ * @return {number}
+ */
+var reverse = function (x) {
+  var flag = x < 0 ? -1 : 1
+  var result = flag * Number(String(Math.abs(x)).split('').reverse().join(''))
+  if (result > Math.pow(2, 31) - 1 || result < -Math.pow(2, 31)) {
+    return 0
+  }
+  return result
+}
 
-### 客户端
+var reverse = function (x) {
+  var flag = x < 0 ? -1 : 1
+  var result = flag * Number(String(Math.abs(x)).split('').reverse().join(''))
+  if (result > 2147483647 || result < -2147483648) {
+    return 0
+  }
+  return result
+}
 
-通过发送请求获取服务器资源的web浏览器等， 都可以称为客户端。web使用一种名为http(HyperText transformer Protocol, 超文本传输协议)的协议作为规范， 完成客户端到服务器端等一系列运作流程。web是建立在Http协议上通信的。
+reverse(123)
+```
 
+### 
 
+### 字符串转整数
 
-### 3项www技术
+```js
 
-文本标记语言html(超文本标记语言)、文档传递协议Http(超文本传输协议)、指定文档所在地址URL(统一资源定位符)
-
-
-
-### 网络基础TCP/IP
-
-通常使用的网络是在TCP/IP协议族的基础上运作的，而http是属于它内部的一个**子集**。
+```
 
