--- a/docs/0资源/资源链接.md
+++ b/docs/0资源/资源链接.md
@@ -1,12 +1,20 @@
-# css
+##### css
 
 1. [bootstrap](https://www.bootcss.com/)
 2. [tailwindcss](https://www.tailwindcss.cn/)
 
 
 
-# 游戏
+##### 游戏
 
 1. playcanvas
 2. egret
 3. cocos2d
+
+
+
+##### 学习
+
+https://github.com/amandakelake/blog
+
+https://github.com/mqyqingfeng/Blog/issues/3
