--- a/docs/1前端/javascript/综合.md
+++ b/docs/1前端/javascript/综合.md
@@ -306,8 +306,17 @@ ECStack = [
 ];
 ```
 
-# 7、let 和 const 的块级作用域
+- 函数是怎样根据作用域链来查找变量的？
+- 作用域是什么?
+- 为什么作用域会形成链？
+- 作用域链是动态的吗？
 
+# 7、let 和 const 的块级作用域
+### var与const、let的区别？
+- 块级作用域？
+- 函数作用域？
+- 变量提升？
+- 重复声明？
 # 8、JavaScript之执行上下文栈
 > 顺序执行？
 如果要问到 JavaScript 代码执行顺序的话，想必写过 JavaScript 的开发者都会有个直观的印象，那就是顺序执行，毕竟：
@@ -466,13 +475,11 @@ ECStack.pop();
 # 9、变量对象(了解)
 变量对象是与执行上下文相关的数据作用域，存储了在上下文中定义的变量和函数声明。
 因为不同执行上下文下的变量对象稍有不同，所以我们来聊聊全局上下文下的变量对象和函数上下文下的变量对象。
-
-我们先了解一个概念，叫*全局对象*。在 W3School 中也有介绍：
-- 全局对象是预定义的对象，作为 JavaScript 的全局函数和全局属性的占位符。通过使用全局对象，可以访问所有其他所有预定义的对象、函数和属性。
-
-- 在顶层 JavaScript 代码中，可以用关键字 this 引用全局对象。因为全局对象是作用域链的头，这意味着所有非限定性的变量和函数名都会作为该对象的属性来查询。
-
-例如，当JavaScript 代码引用 parseInt() 函数时，它引用的是全局对象的 parseInt 属性。全局对象是作用域链的头，还意味着在顶层 JavaScript 代码中声明的所有变量都将成为全局对象的属性。
+- 全局对象是什么？
+- 全局上下文的变量对象？
+- 函数的上下文是什么时候创建的？（提示： 执行上下文的代码会分成两个阶段进行处理：分析和执行。）
+- 尝试用上下文分析函数和变量的提升？
+- 在创建完上下文时，变量和函数提升的优先级？
 
 
 # 10、闭包
@@ -484,3 +491,29 @@ MDN 对闭包的定义为：
 
 由此，我们可以看出闭包共有两部分组成：
 > 闭包 = 函数 + 函数能够访问的自由变量。
+
+- 从理论上来说： 任何函数都是闭包，因为从创建函数开始就已经保存了全局的上下文，所以能访问外部的自由变量。
+- 从实践上来说只要满足下面两个要求即可：
+    - 即使创建函数的上下文已经销毁了， 但是函数依然存在，比如外部函数执行后返回一个新的函数并且被引用。
+    - 使用了自由变量。
+
+> 思考：
+- 为什么闭包不会被垃圾回收？
+
+
+# 11、this指向
+- 谁调用函数fn，this就指向谁。this的指向是动态的。
+- 如果是直接调用fn, this就指向全局对象或者是undefined
+- 箭头函数内部没有this, 所以箭头函数的this的指向和定义箭头函数时的外部函数的this指向是一致的。
+- 通过new创建对象时，this指向的是创建的对象。如果构造函数返回一个对象，那么this将会指向这个对象。
+
+> 思考：
+- 改变this指向的方式？
+    - bind
+    - call
+    - apply
+    - 箭头函数
+- 什么时候不建议使用箭头函数？bind、call、apply对箭头函数是否有效？
+
+# 原型和原型链
+![yuan_xing](.image\yuan_xing.jpg)
