--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -30,10 +30,44 @@ Object.defineProperty(vm, 'computedKey', {
 - 3、假设计算属性b依赖组件数据`data.a`, 那么当`data.a`改变时是怎么通知到使用了计算属性b的watcher的？
 
 ### beforeCreate
+- beforCreate之前做了哪些事情？
+- 在beforeCreate能访问到data、perops、computed吗？为什么？
+- beforeCreate的使用场景？
 
 ### created
+- beforCreate和created之间做了哪些事情？
+
+# 任务调度篇
+### nextTick
+- 作用是什么？
+- nextTick是使用什么方式来做到异步处理任务队列的？是怎样做到优雅降级的？
+- 能否自己实现一个nextTick？
+
+### queueWatcher(render Watcher 队列)
+- 作用是什么？
+- 为什么要异步更新renderWatcher？
+- 为什么要使用队列？而不是每个renderWatcher都直接使用nextTick? nextTick本身已经有自己的队列了, 能够保证同步加入nextTick的wathcer能够在
+    同一轮异步任务中执行。
 
 # 视图篇
+### beforeMount
+- 什么时候执行的？
+
+### renderWathcer
+- 作用？
+- vnode是什么？
+
+### render
+- 作用？
+- 组件第一次执行render方法是什么时候？
+- 使用vnode的优势？劣势？
+
+### 组件
+- 第一次渲染是同步还是异步？ 第二次以后呢？
+- vm.$scopedSlots？(todo)
+
+- vm._vnode和vm.$vnode分别是什么？
+
 
 
 
