--- a/docs/算法/算法.md
+++ b/docs/算法/算法.md
@@ -1,37 +1,182 @@
-### 整数反转
+# 一、排序算法
+
+> 参考文档
+
+- *https://www.cnblogs.com/onepixel/articles/7674659.html*
+
+### 比较类排序
+
+##### 交换排序
+
+- 冒泡排序
 
 ```js
-// 整数反转
-/**
- * @param {number} x
- * @return {number}
- */
-var reverse = function (x) {
-  var flag = x < 0 ? -1 : 1
-  var result = flag * Number(String(Math.abs(x)).split('').reverse().join(''))
-  if (result > Math.pow(2, 31) - 1 || result < -Math.pow(2, 31)) {
-    return 0
+function bubbleSort(arr) {
+  varlen = arr.length;
+  for (vari = 0; i < len - 1; i++) {
+    // 外层循环每执行一次就得到一个排序好的值
+    for (varj = 0; j < len - 1 - i; j++) {
+      if (arr[j] > arr[j + 1]) {
+        // 相邻元素两两对比
+        vartemp = arr[j + 1]; // 元素交换
+        arr[j + 1] = arr[j];
+        arr[j] = temp;
+      }
+    }
   }
-  return result
+  return arr;
 }
-
-var reverse = function (x) {
-  var flag = x < 0 ? -1 : 1
-  var result = flag * Number(String(Math.abs(x)).split('').reverse().join(''))
-  if (result > 2147483647 || result < -2147483648) {
-    return 0
-  }
-  return result
-}
-
-reverse(123)
 ```
 
-### 
+- 快速排序
+```js
+function quickSort(arr, left, right) {
+    var len = arr.length;
+    var partitionIndex; // 基准值的位置
+    var left = typeof left != 'number'? 0 : left; // 左指针
+    var right = typeof right != 'number'? len - 1 : right; // 右指针
+ 
+    if(left < right) {
+        partitionIndex = partition(arr, left, right);
+        quickSort(arr, left, partitionIndex-1);
+        quickSort(arr, partitionIndex+1, right);
+    }
 
-### 字符串转整数
+    return arr;
+}
+ 
+function partition(arr, left ,right) {    // 分区操作
+    var pivot = left;                     // 设定基准值（pivot）
+    var index = pivot + 1;
+    for(var i = index; i <= right; i++) {
+        if(arr[i] < arr[pivot]) {
+            swap(arr, i, index);
+            index++;
+        }       
+    }
+    swap(arr, pivot, index - 1);
+    return index-1;
+}
+ 
+function swap(arr, i, j) {
+    var temp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = temp;
+}
+```
+
+##### 插入排序
+
+- 简单插入排序
 
 ```js
-
+function insertionSort(arr) {
+  var len = arr.length;
+  var preIndex, current;
+  for (var i = 1; i < len; i++) {
+    preIndex = i - 1;
+    current = arr[i];
+    while (preIndex >= 0 && arr[preIndex] > current) {
+      arr[preIndex + 1] = arr[preIndex];
+      preIndex--;
+    }
+    arr[preIndex + 1] = current;
+  }
+  return arr;
+}
 ```
 
+- 希尔插入排序
+
+```js
+function shellSort(arr) {
+  var len = arr.length;
+  for (var gap = Math.floor(len / 2); gap > 0; gap = Math.floor(gap / 2)) {
+    // 注意：这里和动图演示的不一样，动图是分组执行，实际操作是多个分组交替执行
+    for (var i = gap; i < len; i++) {
+      var j = i;
+      var current = arr[i];
+      while (j - gap >= 0 && current < arr[j - gap]) {
+        arr[j] = arr[j - gap];
+        j = j - gap;
+      }
+      arr[j] = current;
+    }
+  }
+  return arr;
+}
+```
+
+##### 选择排序
+
+- 简单选择排序
+
+```js
+function selectionSort(arr) {
+  var len = arr.length;
+  var minIndex; // 记录当前最小值的索引
+  var temp; // 临时变量
+  for (var i = 0; i < len - 1; i++) {
+    minIndex = i;
+    for (var j = i + 1; j < len; j++) {
+      if (arr[j] < arr[minIndex]) {
+        // 寻找最小的数
+        minIndex = j; // 将最小数的索引保存
+      }
+    }
+    temp = arr[i];
+    arr[i] = arr[minIndex];
+    arr[minIndex] = temp;
+  }
+  returnarr;
+}
+```
+
+- 堆排序
+
+##### 归并排序
+
+- 二路归并排序
+
+```js
+function mergeSort(arr) {
+  var len = arr.length;
+  if (len < 2) {
+    return arr;
+  }
+  var middle = Math.floor(len / 2);
+  var left = arr.slice(0, middle);
+  var right = arr.slice(middle));
+  return merge(mergeSort(left), mergeSort(right));
+}
+
+function merge(left, right) {
+  var result = [];
+
+  while (left.length > 0 && right.length > 0) {
+    if (left[0] <= right[0]) {
+      result.push(left.shift());
+    } else {
+      result.push(right.shift());
+    }
+  }
+
+  while (left.length) {
+    result.push(left.shift())
+  };
+
+  while (right.length) {
+    result.push(right.shift())
+  };
+
+  returnresult;
+}
+```
+
+- 多路归并排序
+
+### 非比较类排序
+
+- 计数排序
+- 桶排序
+- 基数排序
