--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -53,6 +53,9 @@ Object.defineProperty(vm, 'computedKey', {
 ### beforeMount
 - 什么时候执行的？
 
+### 组件
+- 第一次渲染是同步还是异步？ 第二次以后呢？
+
 ### renderWathcer
 - 作用？
 - vnode是什么？
@@ -62,18 +65,83 @@ Object.defineProperty(vm, 'computedKey', {
 - 组件第一次执行render方法是什么时候？
 - 使用vnode的优势？劣势？
 
-### 组件
-- 第一次渲染是同步还是异步？ 第二次以后呢？
-- vm.$scopedSlots？(todo)
+### slot
+- vm.$scopedSlots?
+- vm.$slots?
+- 在执行render方法之前`vm.$scopedSlots`和`vm.$slots`就已经准备好了。
+- slot是怎样渲染的？
+- *为什么组件内部只能有一个根节点？*
+- vm._vnode和vm.$vnode分别是什么？ 
+    - 对于组件B来说，`vm.$vnode`是在组件B的父组件A的上下文内生成的一个vnode节点。组件B就是根据`$vnode`来渲染的，父组件A传给组件B的数据也都
+    保存在`$vnode`上。同时在创建组件B的时候，在内部创建的根节点就是`vm._vnode`, 这个节点描述了组件B需要生成的dom树的细节。
 
-- vm._vnode和vm.$vnode分别是什么？
+### $createElement
+`$createElement(tag, data, children)`
+- tag可以传入的值
+ - 字符串
+    - 内置标签
+    - 自定义组件
+        - 调用createComponent
+ - 对象
+ - 函数
+ - 空
+
+- data
+    - is
+    - key
+    - scopedSlots
+
+- children
+
+
+### patch
+- 为什么要使用`createPatchFunction`？
+- 创建`createPatchFunction`的时候传入了什么参数？
+ - 传入定义的模块，比如基本模块(directives、ref), 平台模块(attrs、class、dom-props、events、style、transition)。*什么是模块？*
+ - 传入与平台相关的底层视图操作api, 比如在web环境就是封装好的一些dom操作api，提供patch内部使用。
+
+### vnode hook
+像`directives、ref、attrs、class、dom-props、events、style、transition`等功能的实现，在vue里面是被设计成`modules`的。所谓的`modules`
+就是组合使用vode的hook, 在特定的hook里面做不同的逻辑，结合起来就是一个`modules`。
+- 有哪些vode hook?
+    - create
+    - update
+    - destroy
+
+    - bind? update? unbind? inserted？ componentUpdated？
+
+- 指令也是模块？
+
+- 当vnode被销毁时将执行vnode的`destroy`hook
+  - 既包含了上面说的哪些也有用户定义的hook
+
+### insertedVnodeQueue
+- 作用?
+
+
+### createElm
+
+- 1、创建组件
+    - 调用createComponent
+      - 执行vnode的init hook
+- 2、创建普通dom元素
+    - 如果vnode.tag存在
+        - 根据tag创建dom元素
+        - 设置scopedId。设置scopedId的原理是什么?
+        - 递归创建子元素
+        - 调用vonode的create、inserted两个hook
+    - 如果是注释节点, 直接创建并插入到父节点中
+    - 如果是文本节点, 直接创建并插入到父节点中
 
 
 
 
+### scoped
+- 作用
 
 
-
+### 抽象组件
+- 不能使用ref获取实例
 
 
 
