--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -1,13 +1,13 @@
 # 数据篇
-### Observer
+# Observer
 - 1、Dep、Observer、Watcher三者之间的联系？依赖收集的过程？使用了什么设计模式？
 - 2、Observer内部是怎样对数组进行处理的？针对支持`__proto__`和不支持`__proto__`的运行环境是怎么分别处理的？
 - 3、为什么要使用`$set`给对象新增属性？ 为什么不能给组件data对象添加根属性?
 
-### Dep
+# Dep
 - 作用是什么？
 
-### Watcher
+# Watcher
 - 1、Watcher可以分为哪三类？
 - 2、为什么`computed watcher`要懒计算？
 - 3、`computed`属性缓存计算结果是怎么实现的？
@@ -16,7 +16,7 @@
 - 6、`render watcher`执行时是异步的吗？
 - 7、
 
-### Computed
+# Computed
 - 1、实现原理？
 ```js
 const computedWatcher = new Watcher(vm, userGetter/*定义的computed get函数*/)
@@ -29,43 +29,43 @@ Object.defineProperty(vm, 'computedKey', {
 - 2、怎样设置`computed`不缓存结果, 就算依赖未发生变化也重新计算？
 - 3、假设计算属性b依赖组件数据`data.a`, 那么当`data.a`改变时是怎么通知到使用了计算属性b的watcher的？
 
-### beforeCreate
+# beforeCreate
 - beforCreate之前做了哪些事情？
 - 在beforeCreate能访问到data、perops、computed吗？为什么？
 - beforeCreate的使用场景？
 
-### created
+# created
 - beforCreate和created之间做了哪些事情？
 
 # 任务调度篇
-### nextTick
+# nextTick
 - 作用是什么？
 - nextTick是使用什么方式来做到异步处理任务队列的？是怎样做到优雅降级的？
 - 能否自己实现一个nextTick？
 
-### queueWatcher(render Watcher 队列)
+# queueWatcher(render Watcher 队列)
 - 作用是什么？
 - 为什么要异步更新renderWatcher？
 - 为什么要使用队列？而不是每个renderWatcher都直接使用nextTick? nextTick本身已经有自己的队列了, 能够保证同步加入nextTick的wathcer能够在
     同一轮异步任务中执行。
 
 # 视图篇
-### beforeMount
+# beforeMount
 - 什么时候执行的？
 
-### 组件
+# 组件
 - 第一次渲染是同步还是异步？ 第二次以后呢？
 
-### renderWathcer
+# renderWathcer
 - 作用？
 - vnode是什么？
 
-### render
+# render
 - 作用？
 - 组件第一次执行render方法是什么时候？
 - 使用vnode的优势？劣势？
 
-### slot
+# slot
 - vm.$scopedSlots?
 - vm.$slots?
 - 在执行render方法之前`vm.$scopedSlots`和`vm.$slots`就已经准备好了。
@@ -75,16 +75,21 @@ Object.defineProperty(vm, 'computedKey', {
     - 对于组件B来说，`vm.$vnode`是在组件B的父组件A的上下文内生成的一个vnode节点。组件B就是根据`$vnode`来渲染的，父组件A传给组件B的数据也都
     保存在`$vnode`上。同时在创建组件B的时候，在内部创建的根节点就是`vm._vnode`, 这个节点描述了组件B需要生成的dom树的细节。
 
-### $createElement
+# $createElement
 `$createElement(tag, data, children)`
 - tag可以传入的值
- - 字符串
-    - 内置标签
-    - 自定义组件
+    - 字符串
+        - 内置标签
+            - 创建普通的vnode节点
+        - 自定义组件
+            - 根据tag获取到组件的options对象或者构造函数
+            - 调用createComponent创建vnode
+    - options对象
         - 调用createComponent
- - 对象
- - 函数
- - 空
+    - Vue.extend()返回的构造函数
+        - 调用createComponent创建vnode
+    - 空
+        - 创建空的vnode节点
 
 - data
     - is
@@ -93,14 +98,89 @@ Object.defineProperty(vm, 'computedKey', {
 
 - children
 
+# createComponent创建组件的vnode节点
+### 传给`createComponent`的参数可能有哪几种情况？
+    - options对象
+        - 使用Vue.extend处理options
+    - 组件构造函数
 
-### patch
+### 异步组件是怎么处理的?
+    - 组件已加载如何处理
+    - 组件还未加载如何处理
+
+### 为什要多次调用`resolveConstructorOptions`?（未解决）
+
+- `v-model`是怎么处理的？
+v-model只是语法糖，是使用`props`和`events`实现的。
+下面的例子是`v-model="formData.subjectCode"`绑定的例子：
+```js
+data: {
+    model: {
+        value: _vm.formData.subjectCode,
+        callback: function($$v) {
+            _vm.$set(_vm.formData, "subjectCode", $$v)
+        },
+        expression: "formData.subjectCode"
+    }
+}
+```
+处理的逻辑如下
+```js
+function transformModel (options, data: any) {
+  const prop = (options.model && options.model.prop) || 'value'
+  const event = (options.model && options.model.event) || 'input'
+  ;(data.attrs || (data.attrs = {}))[prop] = data.model.value
+  const on = data.on || (data.on = {})
+  const existing = on[event]
+  const callback = data.model.callback
+  if (isDef(existing)) {
+    if (
+      Array.isArray(existing)
+        ? existing.indexOf(callback) === -1
+        : existing !== callback
+    ) {
+      on[event] = [callback].concat(existing)
+    }
+  } else {
+    on[event] = callback
+  }
+}
+```
+
+###  处理props、attrs得到props
+    - 组件options上定义的props会从`data.props`和`data.attrs`上找到值
+    - attrs和props不同的是，如果是从attrs上查找到的将会从attrs上删除
+
+
+### 安装hook
+```js
+const componentVNodeHooks = {
+  init (vnode: VNodeWithData, hydrating: boolean): ?boolean {
+     // 1.const child = createComponentInstanceForVnode
+     // 2.child.$mount(hydrating ? vnode.elm : undefined, hydrating)
+  },
+
+  prepatch (oldVnode: MountedComponentVNode, vnode: MountedComponentVNode) {
+    // 1.updateChildComponent
+  },
+
+  insert (vnode: MountedComponentVNode) {
+    // 1.callHook(componentInstance, 'mounted')
+  },
+
+  destroy (vnode: MountedComponentVNode) {
+    // 当vnode节点销毁时对应的组件实例也会被销毁
+    // 1.componentInstance.$destroy()
+  }
+}
+```
+# patch
 - 为什么要使用`createPatchFunction`？
 - 创建`createPatchFunction`的时候传入了什么参数？
  - 传入定义的模块，比如基本模块(directives、ref), 平台模块(attrs、class、dom-props、events、style、transition)。*什么是模块？*
  - 传入与平台相关的底层视图操作api, 比如在web环境就是封装好的一些dom操作api，提供patch内部使用。
 
-### vnode hook
+# vnode hook
 像`directives、ref、attrs、class、dom-props、events、style、transition`等功能的实现，在vue里面是被设计成`modules`的。所谓的`modules`
 就是组合使用vode的hook, 在特定的hook里面做不同的逻辑，结合起来就是一个`modules`。
 - 有哪些vode hook?
@@ -115,11 +195,11 @@ Object.defineProperty(vm, 'computedKey', {
 - 当vnode被销毁时将执行vnode的`destroy`hook
   - 既包含了上面说的哪些也有用户定义的hook
 
-### insertedVnodeQueue
+# insertedVnodeQueue
 - 作用?
 
 
-### createElm
+# createElm
 
 - 1、创建组件
     - 调用createComponent
@@ -133,18 +213,29 @@ Object.defineProperty(vm, 'computedKey', {
     - 如果是注释节点, 直接创建并插入到父节点中
     - 如果是文本节点, 直接创建并插入到父节点中
 
-
-
-
-### scoped
+# scoped
 - 作用
 
 
-### 抽象组件
+# 抽象组件
 - 不能使用ref获取实例
+原因是`ref`在使用前就已经被去除了，所以ref是不起作用的。
+```js
+if (isTrue(Ctor.options.abstract)) {
+    // abstract components do not keep anything
+    // other than props & listeners & slot
+
+    // work around flow
+    const slot = data.slot
+    data = {}
+    if (slot) {
+        data.slot = slot
+    }
+}
+```
 
 
-
+# 函数式组件
 
 
 
