--- a/docs/算法/算法.md
+++ b/docs/算法/算法.md
@@ -29,39 +29,41 @@ function bubbleSort(arr) {
 ```
 
 - 快速排序
+
 ```js
 function quickSort(arr, left, right) {
-    var len = arr.length;
-    var partitionIndex; // 基准值的位置
-    var left = typeof left != 'number'? 0 : left; // 左指针
-    var right = typeof right != 'number'? len - 1 : right; // 右指针
- 
-    if(left < right) {
-        partitionIndex = partition(arr, left, right);
-        quickSort(arr, left, partitionIndex-1);
-        quickSort(arr, partitionIndex+1, right);
-    }
+  var len = arr.length;
+  var partitionIndex; // 基准值的位置
+  var left = typeof left != "number" ? 0 : left; // 左指针
+  var right = typeof right != "number" ? len - 1 : right; // 右指针
 
-    return arr;
+  if (left < right) {
+    partitionIndex = partition(arr, left, right);
+    quickSort(arr, left, partitionIndex - 1);
+    quickSort(arr, partitionIndex + 1, right);
+  }
+
+  return arr;
 }
- 
-function partition(arr, left ,right) {    // 分区操作
-    var pivot = left;                     // 设定基准值（pivot）
-    var index = pivot + 1;
-    for(var i = index; i <= right; i++) {
-        if(arr[i] < arr[pivot]) {
-            swap(arr, i, index);
-            index++;
-        }       
+
+function partition(arr, left, right) {
+  // 分区操作
+  var pivot = left; // 设定基准值（pivot）
+  var index = pivot + 1;
+  for (var i = index; i <= right; i++) {
+    if (arr[i] < arr[pivot]) {
+      swap(arr, i, index);
+      index++;
     }
-    swap(arr, pivot, index - 1);
-    return index-1;
+  }
+  swap(arr, pivot, index - 1);
+  return index - 1;
 }
- 
+
 function swap(arr, i, j) {
-    var temp = arr[i];
-    arr[i] = arr[j];
-    arr[j] = temp;
+  var temp = arr[i];
+  arr[i] = arr[j];
+  arr[j] = temp;
 }
 ```
 
@@ -178,5 +180,99 @@ function merge(left, right) {
 ### 非比较类排序
 
 - 计数排序
+  > 必须知道数组的组大值。适用于在某一区间的整数无序集合的排序。
+
+```js
+function countingSort(arr, maxValue) {
+  // 创建以数组arr最大值+1的长度的数组
+  var bucket = new Array(maxValue + 1);
+  var sortedIndex = 0;
+  var arrLen = arr.length;
+  var bucketLen = maxValue + 1;
+
+  // 将arr[i]放入到bucket[arr[i]]的位置，没重复一次计数加1
+  for (vari = 0; i < arrLen; i++) {
+    if (!bucket[arr[i]]) {
+      bucket[arr[i]] = 0;
+    }
+    bucket[arr[i]]++;
+  }
+
+  // 遍历bucket, 当计数不为0时往arr写入一个相应的数值。
+  for (varj = 0; j < bucketLen; j++) {
+    while (bucket[j] > 0) {
+      arr[sortedIndex++] = j;
+      bucket[j]--;
+    }
+  }
+
+  return arr;
+}
+```
+
 - 桶排序
+
+```js
+function bucketSort(arr, bucketSize) {
+    if(arr.length === 0) {
+      return arr;
+    }
+
+    var i;
+    var minValue = arr[0];
+    var maxValue = arr[0];
+
+    for(i = 1; i < arr.length; i++) {
+      if(arr[i] < minValue) {
+          minValue = arr[i];               // 输入数据的最小值
+      } else if(arr[i] > maxValue) {
+          maxValue = arr[i];               // 输入数据的最大值
+      }
+    }
+
+    // 桶的初始化
+    var DEFAULT_BUCKET_SIZE = 5;           // 设置桶的默认数量为5
+    bucketSize = bucketSize || DEFAULT_BUCKET_SIZE;
+    var bucketCount = Math.floor((maxValue - minValue) / bucketSize) + 1;
+    var buckets =new Array(bucketCount);
+
+    for(i = 0; i < buckets.length; i++) {
+        buckets[i] = [];
+    }
+
+    // 利用映射函数将数据分配到各个桶中
+    for(i = 0; i < arr.length; i++) {
+        buckets[Math.floor((arr[i] - minValue) / bucketSize)].push(arr[i]);
+    }
+
+    arr.length = 0;
+
+    // 对每个桶进行排序依次加入的arr中
+    // 因为桶本身的是有顺序的，第二个桶一定会比第一个桶里的值要大
+    for(i = 0; i < buckets.length; i++) {
+        insertionSort(buckets[i]);               // 对每个桶进行排序，这里使用了插入排序
+        for(varj = 0; j < buckets[i].length; j++) {
+            arr.push(buckets[i][j]);
+        }
+    }
+
+    return arr;
+}
+
+function insertionSort(arr) {
+  var len = arr.length;
+  var preIndex, current;
+  for (var i = 1; i < len; i++) {
+    preIndex = i - 1;
+    current = arr[i];
+    while (preIndex >= 0 && arr[preIndex] > current) {
+      arr[preIndex + 1] = arr[preIndex];
+      preIndex--;
+    }
+    arr[preIndex + 1] = current;
+  }
+  return arr;
+}
+```
+
 - 基数排序
