--- a/docs/1前端/css/综合.md
+++ b/docs/1前端/css/综合.md
@@ -230,3 +230,14 @@ cSS3 硬件加速又叫做 GPU 加速，是利用 GPU 进行渲染，减少 CPU 
     - table-cell + vertical-align + inline-block/margin: auto
     - flex
     - grid
+
+# 布局
+- 单列布局
+- 两列布局
+- 三栏布局
+    > 特点：中间列自适应宽度，旁边两侧固定宽度
+    - 圣杯布局
+    - 双飞翼布局
+    - 等高布局
+    - 表格布局
+    - 粘连布局
