--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -174,6 +174,13 @@ const componentVNodeHooks = {
   }
 }
 ```
+### children和slot的区别？
+
+### slot和children是怎样获取的？
+- 在`this._init`中处理内部创建的组件实例时执行`initInternalComponent`时从`parentVnode.componentOptions`上获取的
+    而`componentOptions`是在创建vnode时传过去的。
+- 遍历$options._renderChildren得到，data.slot存在则保存到具名vm.$slots上，不存在就保存在$slots.default上。
+
 # patch
 - 为什么要使用`createPatchFunction`？
 - 创建`createPatchFunction`的时候传入了什么参数？
@@ -200,7 +207,6 @@ const componentVNodeHooks = {
 
 
 # createElm
-
 - 1、创建组件
     - 调用createComponent
       - 执行vnode的init hook
