--- a/docs/算法/算法.md
+++ b/docs/算法/算法.md
@@ -135,6 +135,56 @@ function selectionSort(arr) {
 ```
 
 - 堆排序
+```js
+// 交换两个节点
+function swap(A, i, j) {
+  let temp = A[i];
+  A[i] = A[j];
+  A[j] = temp;
+}
+
+// 将 i 结点以下的堆整理为大顶堆，注意这一步实现的基础实际上是：
+// 假设 结点 i 以下的子堆已经是一个大顶堆，shiftDown函数实现的
+// 功能是实际上是：找到 结点 i 在包括结点 i 的堆中的正确位置。后面
+// 将写一个 for 循环，从第一个非叶子结点开始，对每一个非叶子结点
+// 都执行 shiftDown操作，所以就满足了结点 i 以下的子堆已经是一大
+//顶堆
+function shiftDown(A, i, length) {
+  let temp = A[i]; // 当前父节点
+  // j<length 的目的是对结点 i 以下的结点全部做顺序调整
+  for (let j = 2 * i + 1; j < length; j = 2 * j + 1) {
+    temp = A[i]; // 将 A[i] 取出，整个过程相当于找到 A[i] 应处于的位置
+    if (j + 1 < length && A[j] < A[j + 1]) {
+      j++; // 找到两个孩子中较大的一个，再与父节点比较
+    }
+    if (temp < A[j]) {
+      swap(A, i, j); // 如果父节点小于子节点:交换；否则跳出
+      i = j; // 交换后，temp 的下标变为 j
+    } else {
+      break;
+    }
+  }
+}
+
+// 堆排序
+function heapSort(A) {
+  // 初始化大顶堆，从第一个非叶子结点开始
+  for (let i = Math.floor(A.length / 2 - 1); i >= 0; i--) {
+    shiftDown(A, i, A.length);
+  }
+  // 排序，每一次for循环找出一个当前最大值，数组长度减一
+  for (let i = Math.floor(A.length - 1); i > 0; i--) {
+    swap(A, 0, i); // 根节点与最后一个节点交换
+    shiftDown(A, 0, i); // 从根节点开始调整，并且最后一个结点已经为当
+    // 前最大值，不需要再参与比较，所以第三个参数
+    // 为 i，即比较到最后一个结点前一个即可
+  }
+}
+
+let Arr = [4, 6, 8, 5, 9, 1, 2, 5, 3, 2];
+heapSort(Arr);
+alert(Arr);
+```
 
 ##### 归并排序
 
@@ -214,49 +264,49 @@ function countingSort(arr, maxValue) {
 
 ```js
 function bucketSort(arr, bucketSize) {
-    if(arr.length === 0) {
-      return arr;
-    }
-
-    var i;
-    var minValue = arr[0];
-    var maxValue = arr[0];
-
-    for(i = 1; i < arr.length; i++) {
-      if(arr[i] < minValue) {
-          minValue = arr[i];               // 输入数据的最小值
-      } else if(arr[i] > maxValue) {
-          maxValue = arr[i];               // 输入数据的最大值
-      }
-    }
-
-    // 桶的初始化
-    var DEFAULT_BUCKET_SIZE = 5;           // 设置桶的默认数量为5
-    bucketSize = bucketSize || DEFAULT_BUCKET_SIZE;
-    var bucketCount = Math.floor((maxValue - minValue) / bucketSize) + 1;
-    var buckets =new Array(bucketCount);
-
-    for(i = 0; i < buckets.length; i++) {
-        buckets[i] = [];
-    }
-
-    // 利用映射函数将数据分配到各个桶中
-    for(i = 0; i < arr.length; i++) {
-        buckets[Math.floor((arr[i] - minValue) / bucketSize)].push(arr[i]);
-    }
-
-    arr.length = 0;
-
-    // 对每个桶进行排序依次加入的arr中
-    // 因为桶本身的是有顺序的，第二个桶一定会比第一个桶里的值要大
-    for(i = 0; i < buckets.length; i++) {
-        insertionSort(buckets[i]);               // 对每个桶进行排序，这里使用了插入排序
-        for(varj = 0; j < buckets[i].length; j++) {
-            arr.push(buckets[i][j]);
-        }
-    }
-
+  if (arr.length === 0) {
     return arr;
+  }
+
+  var i;
+  var minValue = arr[0];
+  var maxValue = arr[0];
+
+  for (i = 1; i < arr.length; i++) {
+    if (arr[i] < minValue) {
+      minValue = arr[i]; // 输入数据的最小值
+    } else if (arr[i] > maxValue) {
+      maxValue = arr[i]; // 输入数据的最大值
+    }
+  }
+
+  // 桶的初始化
+  var DEFAULT_BUCKET_SIZE = 5; // 设置桶的默认数量为5
+  bucketSize = bucketSize || DEFAULT_BUCKET_SIZE;
+  var bucketCount = Math.floor((maxValue - minValue) / bucketSize) + 1;
+  var buckets = new Array(bucketCount);
+
+  for (i = 0; i < buckets.length; i++) {
+    buckets[i] = [];
+  }
+
+  // 利用映射函数将数据分配到各个桶中
+  for (i = 0; i < arr.length; i++) {
+    buckets[Math.floor((arr[i] - minValue) / bucketSize)].push(arr[i]);
+  }
+
+  arr.length = 0;
+
+  // 对每个桶进行排序依次加入的arr中
+  // 因为桶本身的是有顺序的，第二个桶一定会比第一个桶里的值要大
+  for (i = 0; i < buckets.length; i++) {
+    insertionSort(buckets[i]); // 对每个桶进行排序，这里使用了插入排序
+    for (varj = 0; j < buckets[i].length; j++) {
+      arr.push(buckets[i][j]);
+    }
+  }
+
+  return arr;
 }
 
 function insertionSort(arr) {
