--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -75,6 +75,8 @@ Object.defineProperty(vm, 'computedKey', {
     - 对于组件B来说，`vm.$vnode`是在组件B的父组件A的上下文内生成的一个vnode节点。组件B就是根据`$vnode`来渲染的，父组件A传给组件B的数据也都
     保存在`$vnode`上。同时在创建组件B的时候，在内部创建的根节点就是`vm._vnode`, 这个节点描述了组件B需要生成的dom树的细节。
 
+- slot标签是怎么处理的？
+
 # $createElement
 `$createElement(tag, data, children)`
 - tag可以传入的值
@@ -191,11 +193,17 @@ const componentVNodeHooks = {
 像`directives、ref、attrs、class、dom-props、events、style、transition`等功能的实现，在vue里面是被设计成`modules`的。所谓的`modules`
 就是组合使用vode的hook, 在特定的hook里面做不同的逻辑，结合起来就是一个`modules`。
 - 有哪些vode hook?
-    - create
-    - update
-    - destroy
-
-    - bind? update? unbind? inserted？ componentUpdated？
+    - 自定义组件
+        - init 根据vnode创建自定义组件实例
+        - prepatch 子组件重新渲染patch
+        - insert
+        - destroy
+    - 通用
+        - create
+        - update 更新style、class等
+        - postpatch
+        - destroy
+        - bind? update? unbind? inserted？ componentUpdated？
 
 - 指令也是模块？
 
@@ -223,6 +231,14 @@ const componentVNodeHooks = {
 - 作用
 
 
+# children的patch过程
+- children的patch过程是对新旧两个children数组进行比对找到相同的两个vnode进行patchVnode的逻辑
+- 为什么要要找相同的vnode进行patch呢？
+### patch算法
+- 首先对oldCh和newCh的首尾进行对比
+- 
+
+
 # 抽象组件
 - 不能使用ref获取实例
 原因是`ref`在使用前就已经被去除了，所以ref是不起作用的。
@@ -242,6 +258,8 @@ if (isTrue(Ctor.options.abstract)) {
 
 
 # 函数式组件
+
+#  异步组件
 
 
 
