--- a/docs/1前端/javascript/综合.md
+++ b/docs/1前端/javascript/综合.md
@@ -1362,11 +1362,11 @@ function visitTree1(tree) {
 }
 ```
 
-### ES5/ES6 的继承除了写法以外还有什么区别？
+# ES5/ES6 的继承除了写法以外还有什么区别？
 
 > 题目： https://github.com/yygmind/blog/issues/43
 
-### 执行顺序
+# 执行顺序
 ```js
 async function async1() {
     console.log('async1 start');
@@ -1399,4 +1399,115 @@ console.log('script end');
 // setTimeout
 ```
 
-### JS 异步解决方案的发展历程以及优缺点。
+# JS 异步解决方案的发展历程以及优缺点。
+
+
+# 通信
+### 同源
+- 协议、域名、端口都相同才是同源。
+### 同源策略限制
+> 限制从一个源加载的文档或脚本如何与来自另一个源的资源进行交互。这是一个用于隔离潜在恶意文件的关键的安全机制。
+> 不同源的JS只能未经允许地发数据，不能未经允许地读数据。
+- cookie、storage、indexDB的访问
+- dom的访问
+- ajax请求
+
+### 为什么form提交不会有跨域行为而ajax有？
+跨域是浏览器行为，而且具体行为是，你的请求可以发送，浏览器也能收到正常的响应，只是返回给你的时候，浏览器检查了是不是跨域，是对话就阻止了。
+form 提交(submit函数)之后，是不会有任何数据返回的。你没机会读任何东西，所以可以认为是无害的，不在同源策略之内。
+但 Ajax 是有数据返回的。所以是浏览器认为是可能有害的。
+- 不管请求是否跨域， 关键是能否获取到服务器返回的信息，如果能获取到那么跨域就是危险的。
+- 跨域请求其实是将请求发送到了服务器，只是返回结果被浏览器拦截了。
+
+
+### 简单请求跨域和复杂请求跨域
+- 简单跨域会直接将请求发送到服务器
+- 复杂请求会先发送预请求options，只有当预请求发送成功后才会发送实际的请求。
+
+
+### 前后端如何通信
+- ajax
+- websocket
+- cors （Cross Origin Resource Sharing 跨来源资源共享）
+
+### 跨域通信
+- 1、jsonp
+- 2、postMessage
+- 3、cors
+- 4、websocket
+- 5、对于嵌套的不同域页面可以使用url上的hash值传递消息
+
+# 跨窗口通信
+
+
+# 输入URL到页面渲染的过程
+- 1、DNS解析得到ip地址
+  - DNS负载均衡
+- 2、通过ip地址向服务器发送一个http请求
+  - TCP连接。 三次握手。
+  - http缓存、浏览器缓存
+  - nginx反向代理
+- 3、请求返回html文件
+
+
+
+# TCP三次握手， 四次挥手
+### 三次握手
+- 目的：防止server端一直等待，浪费资源。
+
+# 重定向301和302
+
+# 负载均衡
+
+# nginx反向代理
+
+# csrf
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
