--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -189,6 +189,76 @@ const componentVNodeHooks = {
  - 传入定义的模块，比如基本模块(directives、ref), 平台模块(attrs、class、dom-props、events、style、transition)。*什么是模块？*
  - 传入与平台相关的底层视图操作api, 比如在web环境就是封装好的一些dom操作api，提供patch内部使用。
 
+- `__patch__`(oldVnode, vnode)
+    - oldvnode不存在或者oldvnode是一个dom元素
+        - createElm的逻辑
+            - 1、创建组件
+                - 调用createComponent
+                    - 执行vnode.data.hook.init
+                        - 执行createComponentInstanceForVnode，根据vnode创建组件实例vm
+                            - 组建创建内部组件用到的internalComponentsOptions
+                                ```js
+                                    const options: InternalComponentOptions = {
+                                        _isComponent: true, // 是否是自定义组件
+                                        _parentVnode: vnode, // 子组件的$Vnode
+                                        parent               //  父组件的实例vm
+                                    }
+                                ```
+                            - 处理inline-template
+                            - 调用`new vnode.componentOptions.Ctor(options)`
+                            - 然后又重新开始创建组件的逻辑。与创建根组件不同的地方：
+                                - 根组件是执行mergeOptions的逻辑
+                                - 非根组件是执行initInternalComponent的逻辑
+                        - 子组件实例创建成功后生成的dom元素就是$el，将实例vm赋值给vnode.componentInstance
+                        - 子组件调用$mount(), 挂载的dom元素是空的，
+                        - 执行完$mount()后生成的dom元素并没有插入到父节点中，也没有执行生命周期mounted
+                    - initComponent, 如果创建出了vnode的组件实例， 也就是vnode.componentInstance存在的时候就对组件实例初始化
+                        - 前面已经知道了每个组件在patch的时候都会有一个insertedVnodeQueue数组，这里会将子组件的insertedVnodeQueue队列合并到父组件的insertedVnodeQueue队列中去
+                            并且清空子组件的insertedVnodeQueue队列
+                        - vnode.elm = vnode.componentInstance.$el
+                        - invokeCreateHooks
+                            - 调用vnode.data.hook.create，更新组件根节点的属性，事件等等
+                            - 如果vnode.data.hook.insert存在则将vnode加入到insertedVnodeQueue中, 在vnode.data.hook.insert中会执行组件的mounted声明周期
+                            - setScope
+                    - 将vnode.elm插入到父节点中
+                - 将vnode.elm插入到父节点中
+            - 2、创建普通dom元素
+                - 如果vnode.tag存在
+                    - 根据tag创建dom元素
+                    - 设置scopedId。设置scopedId的原理是什么?
+                    - 递归创建子元素, 执行createChildren方法，内部调用了createElm，其实就是递归
+                    - 调用vonode的create、inserted两个hook
+                    - 将生成的dom元素插入到父节点中
+                - 如果是注释节点, 直接创建并插入到父节点中
+                - 如果是文本节点, 直接创建并插入到父节点中
+    - oldvnode是一个Vnode对象
+        - patchVnode(oldVnode, vnode)
+    
+    - 调用`invokeInsertHook(vnode, insertedVnodeQueue, isInitialPatch)`
+        - 当isInitialPatch是true并且vnode.parent存在时不会立马执行insertedVnodeQueue, 而是保存在pendingInsert上面
+            等到patch执行完后将pendingInsert合并到父组件的insertedVnodeQueue上
+        - 在根组件patch完成后就会执行insertedVnodeQueue队列, 这个队列保存了所有需要进行mounted的子组件。
+            保证了mounted的执行顺序，并且确保能访问到更新后的dom元素
+        ```js
+            function invokeInsertHook (vnode, queue, initial) {
+                // delay insert hooks for component root nodes, invoke them after the
+                // element is really inserted
+                // 延迟执行组件的mounted事件在所有dom元素插入到文档之后，确保在mounted中能访问到dom元素
+                // 只有根组件的mounted事件是在自己patch完成后执行的
+                // 内组件不是这样的，虽然内部组件patch完成后dom元素已经生成了并且插入到了父节点中
+                // 但是mounted生命周期是延迟执行的。
+                if (isTrue(initial) && isDef(vnode.parent)) {
+                    // 将当前vnode的插入队列放到父组件的pendingInsert上
+                    vnode.parent.data.pendingInsert = queue
+                } else {
+                    // 遍历vnode队列，执行vonde.data.hook.insert
+                    for (let i = 0; i < queue.length; ++i) {
+                        queue[i].data.hook.insert(queue[i])
+                    }
+                }
+            }
+        ```
+
 # vnode hook
 像`directives、ref、attrs、class、dom-props、events、style、transition`等功能的实现，在vue里面是被设计成`modules`的。所谓的`modules`
 就是组合使用vode的hook, 在特定的hook里面做不同的逻辑，结合起来就是一个`modules`。
@@ -211,21 +281,8 @@ const componentVNodeHooks = {
   - 既包含了上面说的哪些也有用户定义的hook
 
 # insertedVnodeQueue
+- 每个组件内部patch的时候都有一个vnode插队列
 - 作用?
-
-
-# createElm
-- 1、创建组件
-    - 调用createComponent
-      - 执行vnode的init hook
-- 2、创建普通dom元素
-    - 如果vnode.tag存在
-        - 根据tag创建dom元素
-        - 设置scopedId。设置scopedId的原理是什么?
-        - 递归创建子元素
-        - 调用vonode的create、inserted两个hook
-    - 如果是注释节点, 直接创建并插入到父节点中
-    - 如果是文本节点, 直接创建并插入到父节点中
 
 # scoped
 - 作用
@@ -234,9 +291,12 @@ const componentVNodeHooks = {
 # children的patch过程
 - children的patch过程是对新旧两个children数组进行比对找到相同的两个vnode进行patchVnode的逻辑
 - 为什么要要找相同的vnode进行patch呢？
-### patch算法
-- 首先对oldCh和newCh的首尾进行对比
-- 
+### vodeChildren的patch算法
+- 判断oldCh的头和newCh的头，oldCh的尾和newCh的尾，oldCh的头和newCh的尾，oldCh的尾和newCh的头。如果其中一次判断认为这是两个相同的节点，
+    那么就进行patchVnode的逻辑
+- 当上面的条件都不满足时，就会通过遍历的方式找到相同的节点进行patch。通过暴力遍历显然是效率很低的， 所以vue里面采用了key来做优化。
+    思路很简单，先遍历oldChildren建立key和vnode的对象，通过newVnode的key作为索引去找到对应的oldVnode。如果没找到才会遍历oldChildren，还是没找到的话就认为这是一个新的节点将会进行createEle的逻辑。
+> 注意： 就算两个vnode的key值是一样的，如果tag不一样，难么他们也不能认为是同样的vnode。
 
 
 # 抽象组件
