--- a/docs/算法/排序算法.md
+++ b/docs/算法/排序算法.md
@@ -4,6 +4,9 @@
 
 - *https://www.cnblogs.com/onepixel/articles/7674659.html*
 
+
+![](./image/210314-1.png)
+
 ### 比较类排序
 
 ##### 交换排序
@@ -140,6 +143,12 @@ function selectionSort(arr) {
     - 将堆顶和数组的最后一个元素交换，这样就把最大值放到了数组的最后面
     - 把数组长度为n-1的部分重新构造大顶堆，把堆顶放到数组的n-1的位置
     - 重复上面的步骤
+  - 堆的特点
+    - 是一个完全二叉树
+    - 所有子节点的值都小于(或大于)父节点的值
+  - 大顶堆
+  - 小顶堆
+  - 堆排序的时间复杂度O(nlogn)
 
 ```js
 // 交换两个节点
@@ -149,24 +158,25 @@ function swap(A, i, j) {
   A[j] = temp;
 }
 
-// 将 i 结点以下的堆整理为大顶堆，注意这一步实现的基础实际上是：
-// 假设 结点 i 以下的子堆已经是一个大顶堆，shiftDown函数实现的
-// 功能是实际上是：找到 结点 i 在包括结点 i 的堆中的正确位置。后面
-// 将写一个 for 循环，从第一个非叶子结点开始，对每一个非叶子结点
-// 都执行 shiftDown操作，所以就满足了结点 i 以下的子堆已经是一大
-//顶堆
+// 将以节点i为根节点的二叉树调整为大顶堆
 function shiftDown(A, i, length) {
-  let temp = A[i]; // 当前父节点
-  // j<length 的目的是对结点 i 以下的结点全部做顺序调整
+  // 当前父节点
+  let temp = A[i]; 
+
+  // j的初始值为2*i+1, 即左节点
   for (let j = 2 * i + 1; j < length; j = 2 * j + 1) {
-    temp = A[i]; // 将 A[i] 取出，整个过程相当于找到 A[i] 应处于的位置
+    // 父节点的值
+    temp = A[i]; 
+    // 比较左右两个子节点的最大值，然后用最大值与父节点比较
     if (j + 1 < length && A[j] < A[j + 1]) {
-      j++; // 找到两个孩子中较大的一个，再与父节点比较
+      j++;
     }
+    // 如果最大的子节点大于父节点那么就进行交换, 交换后的以子节点作为根节点的数也要进行调整
     if (temp < A[j]) {
-      swap(A, i, j); // 如果父节点小于子节点:交换；否则跳出
-      i = j; // 交换后，temp 的下标变为 j
+      swap(A, i, j); 
+      i = j;
     } else {
+      // 如果不需要调整则跳出
       break;
     }
   }
@@ -175,11 +185,13 @@ function shiftDown(A, i, length) {
 // 堆排序
 function heapSort(A) {
   // 初始化大顶堆，从第一个非叶子结点开始
+  // 从下往上开始构建大顶堆
   for (let i = Math.floor(A.length / 2 - 1); i >= 0; i--) {
     shiftDown(A, i, A.length);
   }
+
   // 排序，每一次for循环找出一个当前最大值，数组长度减一
-  for (let i = Math.floor(A.length - 1); i > 0; i--) {
+  for (let i = A.length - 1; i > 0; i--) {
     swap(A, 0, i); // 根节点与最后一个节点交换
     shiftDown(A, 0, i); // 从根节点开始调整，并且最后一个结点已经为当
     // 前最大值，不需要再参与比较，所以第三个参数
