--- a/docs/1前端/框架/vue/常见问题.md
+++ b/docs/1前端/框架/vue/常见问题.md
@@ -40,3 +40,33 @@
 - 6、slot不会发生更改时
 - 7、v-once
 - 8、v-show
+- 9、对于不会变化的数据使用Object.freeze()
+- 10、图片资源懒加载
+- 11、路由懒加载
+- 12、组件按需加载
+- 13、虚拟滚动，可视区渲染
+- 14、cdn
+- 15、打包分析，移除未使用或者不必要的代码实现
+
+# vnode？ 优势？
+- vnode是对dom元素的描述对象，在diff的过程中就是根据vnode的不同创建出不同的dom元素的。
+### 优势
+- 操作vnode比操作dom快
+- 在数据发生变化时不会频繁的直接操作dom, 而是讲多次同步的数据更改合并到一轮异步的dom操作中， 减少不必要的重排和重绘。
+- vnode是只与js有关的对象， 与平台无关。所以可在其他非浏览器环境运行。比如服务端渲染、小程序
+### 劣势
+- 对于简单的页面来说使用vnode就显得太过复杂，还不如用原生的
+
+# vuex
+### 直接修改state和使用mutation/action修改的区别？
+### vuex中为什么把把异步操作封装在action，把同步操作放在mutations？
+### 在严格模式下使用vuex和v-model的冲突怎么解决？
+
+
+# vue-router
+### 如何实现路由懒加载?
+- 异步组件+webpack
+
+### 路由守卫有哪些？
+
+### hash和history的区别？
