--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -259,6 +259,8 @@ const componentVNodeHooks = {
             }
         ```
 
+# patch时当组件根节点就会重新创建新的元素，走createElm的逻辑。
+
 # vnode hook
 像`directives、ref、attrs、class、dom-props、events、style、transition`等功能的实现，在vue里面是被设计成`modules`的。所谓的`modules`
 就是组合使用vode的hook, 在特定的hook里面做不同的逻辑，结合起来就是一个`modules`。
@@ -268,11 +270,17 @@ const componentVNodeHooks = {
         - prepatch 子组件重新渲染patch
         - insert
         - destroy
+
     - 通用
         - create
+        - activate
         - update 更新style、class等
         - postpatch
+        - remove transition使用
         - destroy
+
+
+    - 指令使用，在vnode hook中调用
         - bind? update? unbind? inserted？ componentUpdated？
 
 - 指令也是模块？
