--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -330,6 +330,13 @@ if (isTrue(Ctor.options.abstract)) {
 #  异步组件
 
 
+# transition
+
+# keep-alive
+
+# input标签的v-model和组件的v-model
+
+# input使用v-model加上lazy时和不加的区别？
 
 
 
