--- a/docs/0资源/资源链接.md
+++ b/docs/0资源/资源链接.md
@@ -1,17 +1,27 @@
-##### css
+# css
+
 1. [bootstrap](https://www.bootcss.com/)
 2. [tailwindcss](https://www.tailwindcss.cn/)
 
+# 游戏
 
-
-##### 游戏
 1. playcanvas
 2. egret
 3. cocos2d
+4. pixi
+5. Phaser.js
 
-##### 学习
+# 动画
+
+1. TweenMax
+
+# 前端学习
+
 1. https://github.com/amandakelake/blog
 2. https://github.com/mqyqingfeng/Blog/issues/3
 3. https://jelly.jd.com/
-4. 前端100问 https://github.com/yygmind/blog/issues/43
+4. [前端 100 问](https://github.com/yygmind/blog/issues/43)
 5. https://github.com/Advanced-Frontend
+6. [前端知识思维导图](https://www.cnblogs.com/cYang2030/p/14111036.html)
+7. https://www.infoq.cn/article/DsHtSbi6PwCI1TgLL6Jc
+8. [尤雨溪 github](https://github.com/yyx990803/tucao/issues/1)
