--- a/docs/1前端/框架/vue/源码/问题.md
+++ b/docs/1前端/框架/vue/源码/问题.md
@@ -337,6 +337,12 @@ if (isTrue(Ctor.options.abstract)) {
 
 # input使用v-model加上lazy时和不加的区别？
 
+# props是怎么传递到子组件的？ 子组件为何不能那个修改props? props改变后为何子组件就会更新？
+
+
+# vnode.parent是什么？
+
+# 为什么每个组件实例的$createElement方法不一样？
 
 
 
