--- a/docs/1前端/性能/缓存/8-缓存.md
+++ b/docs/1前端/性能/缓存/8-缓存.md
@@ -51,6 +51,13 @@
 -   Etag(在响应头)：服务器响应请求时，告诉浏览器当前资源在服务器的唯一标识（生成规则由服务器决定）。
 -   If-None-Match(在请求头)：当缓存过期时并且发现资源具有 Etag 声明，则向服务器发送请求，并带上 If-None-Match： Etag 的值。服务器收到请求后与资源的 Etag 进行比对，决定返回 200 或 304。
 
+
+### 4、为什么要使用Etag？
+使用 ETag 可以解决 Last-modified 存在的一些问题：
+1. 某些服务器不能精确得到资源的最后修改时间，这样就无法通过最后修改时间判断资源是否更新。
+2. 如果资源修改非常频繁，在秒以下的时间内进行修改，而 Last-modified 只能精确到秒。
+3. 一些资源的最后修改时间改变了，但是内容没改变，使用 ETag 就认为资源还是没有修改的。
+
 ### 4、用户行为与缓存
 
 -   Last-Modified/Etag 只有在用户点击 Ctrl + F5 的时候，缓存会失效，
