--- a/docs/0资源/资源链接.md
+++ b/docs/0资源/资源链接.md
@@ -26,3 +26,4 @@
 7. https://www.infoq.cn/article/DsHtSbi6PwCI1TgLL6Jc
 8. [尤雨溪 github](https://github.com/yyx990803/tucao/issues/1)
 9. [美团](https://tech.meituan.com/2018/10/11/fe-security-csrf.html)
+10. [政采云前端团队](https://www.zoo.team/article/jsbridge)
