--- a/docs/B-前端/I-小程序/常见问题.md
+++ b/docs/B-前端/I-小程序/常见问题.md
@@ -1,4 +1,4 @@
-### 在通过 getPhoneNumber 获取用户手机号进行解密时，开发工具上报`WXBizDataCrypt.decryptData:Illegal Buffer:`的错误。
+# 在通过 getPhoneNumber 获取用户手机号进行解密时，开发工具上报`WXBizDataCrypt.decryptData:Illegal Buffer:`的错误。
 
 原因是当前的 session_key 已经失效了, session_key 失效的原因是前端代码每次使用`wx.checkSession`判断当前`session_key`是否失效，
 如果未失效，则从 localStorage 里获取上一次保存的`session_key`。
