--- a/docs/A-记录/资源链接.md
+++ b/docs/A-记录/资源链接.md
@@ -11,9 +11,29 @@
 4. pixi
 5. Phaser.js
 
+# 即时通讯
+1. ![环信](http://docs-im.easemob.com/im/quickstart/guide/introduction)
+2. 小鹅通
+3. 声网
+
+# excel
+1. xlsx.js
+
+
+# 日志与监控、埋点
+1. fundebuge
+2. talkingdata
+3. grwingio
+
 # 动画
 
 1. TweenMax
+
+
+# 工具
+1. ![正则学习](https://jex.im/regulex)
+2. Can I Use
+3. ![unicode字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
 
 # 前端学习
 
