--- a/docs/B-前端/C-css/基础/单位.md
+++ b/docs/B-前端/C-css/基础/单位.md
@@ -1,11 +1,10 @@
 ### css中大小单位
 
-px：绝对大小
+1. px：绝对大小
 用像素指定大小，其中字体指定的是字体高度。
-%：采用百分比的形式。相对大小
+2. %：采用百分比的形式。相对大小
 相对与父元素设定的值的大小。
-em: 相对于父元素的字体大小
-
-rem: 
-
-相对于html元素的字体大小
+3. em: 相对于父元素的字体大小
+4. rem: 相对于html元素的字体大小
+5. vw/vh
+6. vmin/vmax
