--- a/docs/B-前端/C-css/基础/表格布局.md
+++ b/docs/B-前端/C-css/基础/表格布局.md
@@ -1,11 +1,11 @@
-### css表格布局
+# css表格布局
 
-1、原理：将div以table的形式显示
-2、步骤：
-（1）创建一个div用于表示表格。
-（2）表格中创建div用于表示行。
-（3）在行中创建div用于表示列。
-3、例子
+1. 原理：将div以table的形式显示
+2. 步骤：
+    1. 创建一个div用于表示表格。
+    2. 表格中创建div用于表示行。
+    3. 在行中创建div用于表示列。
+3. 例子
 
 ```
    <div clas="container">
@@ -21,5 +21,7 @@
     .col{display:table-cell;}
 ```
 
-4、css表格显示只是使用一种类似表格的布局来表现这个结构中的内容。 而html表格则是建立数据的结构。
+4. css表格布局和html table标签的区别？ 
+
+css表格显示只是使用一种类似表格的布局来表现这个结构中的内容。 而html表格则是建立数据的结构。
 
