--- a/docs/B-前端/C-css/csss3/自定义字体.md
+++ b/docs/B-前端/C-css/csss3/自定义字体.md
@@ -1,7 +1,43 @@
-### 自定义字体
+# 自定义字体
 
-作用：使用自己的字体
-用法：@font-face{}
-自定义字体软件：AsiaFont Studio
+### 作用
+- 使用自己的字体。
+- 字体图标。
+
+### 原理
+在`unicode`字符集中有一段区域是私人使用区域`\uE000 - \uF8FF`。这个区域每一个编码都可以自定义成自己的字体文字或者字体图标。
+- 每一种字体的自定义字体数量是有限的。
+- 可以定义多种字体，不同的字体显示同一个字符编码是不一样的。
+
+### 用法：
+```css
+@font-face {
+  font-family: "iconfont"; /* project id 2266276 */
+  src: url("//at.alicdn.com/t/font_2266276_bzbylj20bus.eot");
+  src: url("//at.alicdn.com/t/font_2266276_bzbylj20bus.eot?#iefix")
+      format("embedded-opentype"),
+    url("//at.alicdn.com/t/font_2266276_bzbylj20bus.woff2") format("woff2"),
+    url("//at.alicdn.com/t/font_2266276_bzbylj20bus.woff") format("woff"),
+    url("//at.alicdn.com/t/font_2266276_bzbylj20bus.ttf") format("truetype"),
+    url("//at.alicdn.com/t/font_2266276_bzbylj20bus.svg#iconfont") format("svg");
+}
+
+
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-13biaoti1:before {
+  content: "\e68d";
+}
+```
+
+### 自定义字体软件：
+- 阿里云图标库
+- AsiaFont Studio
 转换字体格式生成兼容代码：www.fontsquirrel.com
 
