--- a/docs/002-前端/002-javascript/020-字符串转数字.md
+++ b/docs/002-前端/002-javascript/020-字符串转数字.md
@@ -1,4 +1,30 @@
 # parseInt
-`parseInt(string, radix)`解析一个字符串并返回指定基数的十进制整数， radix 是2-36之间的整数，表示被解析字符串的基数。
+`parseInt(str, radix)`解析一个字符串并返回指定基数的十进制整数， radix 是2-36之间的整数，表示被解析字符串的基数。
 
-1. 第一个参数
+### str第一个参数
+如果参数不是一个字符串，则将其转换为字符串(使用ToString抽象操作)。字符串开头的空白符将会被忽略。
+
+### radix第二个参数
+*从 2 到 36*，表示字符串的基数。例如指定 16 表示被解析值是十六进制数。请注意，10不是默认值！
+
+
+### 返回值
+从给定的字符串中解析出的一个*十进制整数或者NaN*。
+```js
+parseInt('10')
+parseInt('10', 0) // 10
+parseInt('10', 1) // NaN
+parseInt('10', 2) // 2
+parseInt('10', 3) // 3
+// ...
+parseInt('10', 36) // 36
+parseInt('10', 37) // NaN
+
+// 字符串前面有空格，或者后面有非数字字符也能解析
+parseInt('    10r', 2) // 2
+```
+
+# parseFloat
+
+
+# Number
