--- a/docs/002-前端/002-javascript/020-字符串转数字.md
+++ b/docs/002-前端/002-javascript/020-字符串转数字.md
@@ -28,3 +28,12 @@ parseInt('    10r', 2) // 2
 
 
 # Number
+```js
+Number('   2r') // NaN
+Number('   2')  // 2
+Number('   2    ') // 2
+Number('   2.3    ') // 2.3
+Number('   2. 3    ') // NaN
+parseInt('   2. 3    ') // 2
+parseFloat('   2. 3    ') // 2
+```
