--- a/docs/002-前端/002-javascript/028-原型.md
+++ b/docs/002-前端/002-javascript/028-原型.md
@@ -124,7 +124,7 @@ hasOwn.call(Obj, 'f')
     比如 react hook 解决了 class 组件的逻辑复用问题。在 class-component 里，我们需要在同一个生命周期里做不同的事情，并且在不同的生命周期里协调同一件事情的不同阶段。
 
 
-
+# ES5/ES6 的继承除了写法以外还有什么区别？
 
 # instanceof的原理
 ```js
