--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -47,3 +47,4 @@
 8. [尤雨溪 github](https://github.com/yyx990803/tucao/issues/1)
 9. [美团](https://tech.meituan.com/2018/10/11/fe-security-csrf.html)
 10. [政采云前端团队](https://www.zoo.team/article/jsbridge)
+11. [json校验](https://ajv.js.org/guide/formats.html#string-formats)
