--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -43,8 +43,9 @@
 4. [前端 100 问](https://github.com/yygmind/blog/issues/43)
 5. https://github.com/Advanced-Frontend
 6. [前端知识思维导图](https://www.cnblogs.com/cYang2030/p/14111036.html)
-7. https://www.infoq.cn/article/DsHtSbi6PwCI1TgLL6Jc
+7. [info](https://www.infoq.cn/article/DsHtSbi6PwCI1TgLL6Jc)
 8. [尤雨溪 github](https://github.com/yyx990803/tucao/issues/1)
 9. [美团](https://tech.meituan.com/2018/10/11/fe-security-csrf.html)
 10. [政采云前端团队](https://www.zoo.team/article/jsbridge)
 11. [json校验](https://ajv.js.org/guide/formats.html#string-formats)
+12. [试题](https://bitable.feishu.cn/app8Ok6k9qafpMkgyRbfgxeEnet?from=logout&table=tblEnSV2PNAajtWE&view=vewJHSwJVd)
