--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -185,15 +185,6 @@ console.log('script end')
 # 跨窗口通信
 
 # 输入 URL 到页面渲染的过程
-
--   1、DNS 解析得到 ip 地址
-    -   DNS 负载均衡
--   2、通过 ip 地址向服务器发送一个 http 请求
-    -   TCP 连接。 三次握手。
-    -   http 缓存、浏览器缓存
-    -   nginx 反向代理
--   3、请求返回 html 文件
-
 # TCP 三次握手， 四次挥手
 
 ### 三次握手
@@ -202,8 +193,11 @@ console.log('script end')
 
 # 重定向 301 和 302
 
+# 缓存304
+
 # 负载均衡
 
 # nginx 反向代理
 
 # csrf
+# xss
