--- a/docs/002-前端/002-javascript/032-通信.md
+++ b/docs/002-前端/002-javascript/032-通信.md
@@ -28,14 +28,17 @@ form 提交(submit 函数)之后，是不会有任何数据返回的。你没机
 2. websocket
 3. cors（Cross Origin Resource Sharing 跨来源资源共享）
 
+
+# 不跨域通信
+
 # 跨域通信
 分两种情况：
 1. 与不同域的前端通信
     - postMessage
     - 对于嵌套的不同域页面可以使用 url 上的 hash 值传递消息
+    - window.name
 
 2. 与不同域的服务器通信
-
-1. jsonp
-3. cors
-4. websocket
+    - jsonp
+    - cors
+    - websocket
