--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -182,24 +182,27 @@ console.log('script end')
 4. 简单请求跨域和复杂请求跨域
 5. 跨域通信
 
-# 跨窗口通信
+# 23、跨窗口通信
 
-# 输入 URL 到页面渲染的过程
-# TCP 三次握手， 四次挥手
+# 24、输入 URL 到页面渲染的过程
+# 25、TCP 三次握手， 四次挥手
 
-### 三次握手
+### 26、三次握手
 
 -   目的：防止 server 端一直等待，浪费资源。
 
-# 重定向 301 和 302
+# 27、 重定向 301 和 302
 
-# 缓存304
+# 28、缓存304
+1. 请求时浏览器缓存 from memory cache 和 from disk cache 的依据是什么，哪些数据什么时候存放在 Memory Cache 和 Disk Cache中？
 
-# 负载均衡
+# 29、负载均衡
 
-# nginx 反向代理
+# 30、nginx 反向代理
 
-# csrf
-# xss
+# 31、csrf
+# 32、xss
 
-# cookie 和 token 都存放在 header 中，为什么不会劫持 token？
+# 33、cookie 和 token 都存放在 header 中，为什么不会劫持 token？
+
+# 34、数组flatten 
