--- a/docs/002-前端/002-javascript/022-数据类型.md
+++ b/docs/002-前端/002-javascript/022-数据类型.md
@@ -24,9 +24,6 @@
 > 使用 BigInt，您可以安全地存储和操作大整数，甚至可以超过数字的安全整数限制。
 > BigInt 是通过在整数末尾附加 n 或调用构造函数来创建的。
 
-```js
-var
-```
 
 # 2、typeof
 
@@ -123,5 +120,37 @@ a && b // 大致相当于(roughly equivalent to): a ? b : a;
 ```
 
 > == 与 ===
-1.  _常见的误区是“== 检查值是否相等，=== 检查值和类型是否相等”_ 
-2.  _“== 允许在相等比较中进行强制类型转换，而 === 不允许。”_
+1. 常见的误区是“== 检查值是否相等，=== 检查值和类型是否相等”
+2. “== 允许在相等比较中进行强制类型转换，而 === 不允许。”
+
+# 隐式转换的例子
+补充下面的代码，执行后打印1。
+```js
+var a = ?;
+if(a == 1 && a == 2 && a == 3){
+ 	conso.log(1);
+}
+```
+引用类型在比较运算符时候,隐式转换会调用本类型toString或valueOf方法。
+因为`==`判断之前会做类型转换。每次`==`都会做类型转换吗？
+不是, 与{}、[]、null、undefined比较时不会。
+```js
+var a = {
+  i: 1,
+  toString() {
+    return a.i++;
+  }
+}
+
+if( a == 1 && a == 2 && a == 3 ) {
+  console.log(1);
+}
+```
+或者
+```js
+let a = [1,2,3];
+a.toString = a.shift;
+if( a == 1 && a == 2 && a == 3 ) {
+  console.log(1);
+}
+```
